--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -56,5 +56,21 @@
     "update_text2": "We always want to provide the best experience possible, and this update includes performance improvements, bug fixes, and enhanced features.",
     "update_text3": "Please don't forget to update your app to take full advantage of these improvements.",
     "btn_update": "To update",
-    "time": "It may take up to 1 minute to generate the response"
+    "time": "It may take up to 1 minute to generate the response",
+    "seja_premium": "Be Premium",
+    "label_premium1": "Discover situations that are in your favor in love.",
+    "label_premium2": "Discover the challenges that can interfere with your love life.",
+    "label_premium3": "Read advice targeted to your questions.",
+    "label_premium4": "Ask specific questions whenever you want without advertising.",
+    "label_premium5": "Improve your daily gaming experience.",
+    "amount": "U$5,00",
+    "mensal": "Monthly",
+    "conselho_amor": "Your love advice",
+    "placeholder": "Type here",
+    "next": "Next",
+    "couple_name": "Enter the name of the chosen person",
+    "names": "Names chosen",
+    "pense": "Think about the person you named",
+    "couple": "Concentrate and mentally ask for guidance to get the answer from the two names involved. You can only draw one card, so when you feel ready, shuffle the cards.",
+    "choice_couple": "Choose the card"
 }
