--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -63,7 +63,7 @@
     "label_premium3": "Lea consejos dirigidos a sus preguntas.",
     "label_premium4": "Haz preguntas específicas cuando quieras sin publicidad.",
     "label_premium5": "Mejora tu experiencia de juego diaria.",
-    "amount": "U$5,00",
+    "amount": "EUR$6,49",
     "mensal": "Mensual",
     "conselho_amor": "Tu consejo de amor",
     "placeholder": "Digite aquí",
