--- a/src/i18n/translations/pt.json
+++ b/src/i18n/translations/pt.json
@@ -63,7 +63,7 @@
     "label_premium3": "Leia conselhos direcionados para suas questões.",
     "label_premium4": "Faça perguntas específicas quando quiser sem anúncio.",
     "label_premium5": "Melhore sua experiência diária em seus jogos.",
-    "amount": "U$5,00",
+    "amount": "R$15,99",
     "mensal": "Mensal",
     "conselho_amor": "Seu conselho de amor",
     "placeholder": "Digite aqui",
